# stm32hal_bluepill

./: CMakeLists.txt  README.md
SEGGERIDE/: STM32_HAL_Cortex_M3.emProject
